# ufora-backend-public

./: .gitignore  Cargo.toml  README.md
db/ufora_db/: 000013.sst  IDENTITY  LOG  LOG.old.1689570246426147  MANIFEST-000010
src/: app.rs  database.rs  main.rs
src/errors/: authentication_errors.rs  authorization_errors.rs  database_errors.rs  mod.rs  validation_errors.rs
src/handlers/: blog_handlers.rs  chat_handlers.rs  club_handlers.rs  forgot_password_handlers.rs  login_handler.rs  login_handlers.rs  logout_handler.rs  logout_handlers.rs  mod.rs  post_handlers.rs  profile_handlers.rs  project_handlers.rs  registration_handler.rs  registration_handlers.rs  test_handlers.rs  verification_handlers.rs
src/handlers/chat/: group_chat_handlers.rs  mod.rs  personal_chat_handlers.rs
src/middlewares/: auth.rs  club_auth.rs  mod.rs
src/models/: blog.rs  chat.rs  club_claim.rs  company.rs  mod.rs  post.rs  profile.rs  project.rs  undergraduate.rs  user.rs  user_claim.rs
src/routes/: blog_router.rs  chat_router.rs  club_router.rs  forgot_password_router.rs  login_router.rs  logout_router.rs  mod.rs  post_router.rs  profile_router.rs  project_router.rs  registration_router.rs  test_route.rs  verification_router.rs
src/services/: email.rs  jwt.rs  merge_json.rs  mod.rs  otp.rs  password.rs  queryBuilder.rs  query_builder.rs  websocket.rs
surreal_test/: 000020.sst  IDENTITY  LOG  LOG.old.1689218468972527  LOG.old.1689234066333486  LOG.old.1689302264293946  LOG.old.1689737994333395  MANIFEST-000013  MANIFEST-000017  MANIFEST-000026
