[package]
name = "ufora-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
axum-auth = "0.4.0"
bcrypt = "0.15.0"
cargo-watch = "8.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
cors = "0.1.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
lettre = { version = "0.10.4", features = ["tokio1-native-tls", "sendmail-transport"] }
magic-crypt = "3.1.12"
rand = "0.8.5"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
simple-collection-macros = "0.1.2"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = "1.4.1"
